# training-console-app-with-databases-c

./: CMakeLists.txt  README.md  TODO.md
cmake/: FindMYSQL.cmake
datasets/database/mysql/others/: create.user.training.sql
datasets/database/mysql/seeders/: insert.student.sql
datasets/database/mysql/sql/: create.table.student.mysql.sql
datasets/database/sqlite/sql/: create.table.student.sql
docker/: docker-compose.yml
lib/: README.md
src/: main.c
src/include/: helper.c  helper.h
src/include/database/: connector.c  connector.h
src/include/database/driver/: mysql_driver.c  mysql_driver.h  sqlite_driver.c  sqlite_driver.h
src/include/student/: student_manager.c  student_manager.h
